--- a/css/style.css
+++ b/css/style.css
@@ -1226,7 +1226,7 @@ img {
 }
 
 .section-about__content {
-  max-width: 68.6%;
+  max-width: 67.3%;
 }
 
 .section-about__title {
@@ -1247,12 +1247,15 @@ img {
 /* Gallery */
 .section-gallery {
   margin: 0 auto;
-  padding-bottom: 85px;
-  max-width: 1920px;
+  padding-bottom: 79px;
   background-image: url(../img/gallery-image-0.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.section-gallery__container {
+  padding-right: 57px;
 }
 
 .section-gallery__content-wrap {
@@ -1275,7 +1278,7 @@ img {
   -ms-flex-direction: column;
   flex-direction: column;
   margin-right: 0;
-  width: calc(485 / 1920 * 100%);
+  width: calc(400 / 1600 * 100%);
 }
 
 .section-gallery__title {
@@ -1302,12 +1305,13 @@ img {
 
 .section-gallery__content-bottom {
   margin-top: auto;
+  padding-bottom: 2px;
 }
 
 .section-gallery__content-bottom-item {
   font-weight: 400;
   font-size: 16px;
-  line-height: 28px;
+  line-height: 30px;
   color: var(--color-white);
 }
 
@@ -1403,7 +1407,7 @@ img {
 
 .section-gallery__swiper {
   margin-right: 0;
-  width: calc(1373  / 1920 * 100%);
+  width: calc(1150  / 1600 * 100%);
 }
 
 .section-gallery__slides-container {
@@ -1417,14 +1421,15 @@ img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 27px;
+  padding-top: 25px;
+  padding-left: 3px;
 }
 
 .section-gallery__swiper-pagination {
   text-align: center;
-  margin-right: 20px;
+  margin-right: 19.5px;
   margin-bottom: 30px;
-  margin-left: 10px;
+  margin-left: 8.5px;
   color: var(--color-white);
 }
 
@@ -3051,7 +3056,7 @@ img {
   .header__item-form {
     width: 160px;
     font-size: 16px;
-}
+  }
 
   .header__item-form::placeholder {
     font-size: 16px;
@@ -3093,19 +3098,19 @@ img {
   }
 
   .section-gallery {
-    padding-bottom: 83px;
+    padding-bottom: 80px;
   }
 
   .section-gallery__content-left {
-    width: calc(580 / 1920 * 100%);
+    width: calc(483 / 1600 * 100%);
   }
 
   .section-gallery__content-bottom {
-    margin-bottom: 36px;
+    margin-bottom: 33px;
   }
 
   .section-gallery__slide {
-    min-height: 310px;
+    min-height: 315px;
   }
 
   .section-gallery__filter-title {
@@ -3114,7 +3119,7 @@ img {
 
   .section-gallery__swiper {
     margin-right: 0;
-    width: calc(1235  / 1920 * 100%);
+    width: calc(1030  / 1600 * 100%);
   }
 
   .section-catalog {
@@ -3351,10 +3356,9 @@ img {
   .header__image {
     position: absolute;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    /* -webkit-box-ordinal-group: 2;
-    -ms-flex-order: 1;
-    order: 1; */
   }
 
   .header__menu-top-nav {
@@ -3631,7 +3635,7 @@ img {
   }
 
   .header__image-item {
-    width: 187.6px;
+    width: 210px;
     height: 42px;
   }
 
@@ -3646,21 +3650,29 @@ img {
   }
 
   .section-hero__text {
-    margin-bottom: 133px;
+    margin-bottom: 134.5px;
     max-width: 100%;
   }
 
   .section-gallery {
-    padding-bottom: 83px;
+    padding-bottom: 80px;
   }
 
   .section-gallery__content-left {
-    width: calc(810 / 1920 * 100%);
+    width: calc(670 / 1600 * 100%);
+  }
+
+  .section-gallery__content-bottom {
+    margin-bottom: 25px;
   }
 
   .section-gallery__slide {
-    min-height: 325px;
+    min-height: 330px;
   }
+
+  .section-gallery__swiper-navigation {
+    padding-left: 0;
+}
 
   .section-gallery__filter-title {
     margin-bottom: 9px;
@@ -3668,7 +3680,7 @@ img {
 
   .section-gallery__swiper {
     margin-right: 0;
-    width: calc(1235  / 1920 * 100%);
+    width:  100%;
   }
 
   .section-gallery__swiper {
@@ -3686,11 +3698,11 @@ img {
   }
   
   .section-gallery__swiper-pagination {
-    margin-bottom: 25px;
+    margin-bottom: 29px;
   }
   
   .section-gallery__swiper-btn {
-    margin-bottom: 25px;
+    margin-bottom: 29px;
   }
 
   .section-catalog__content-bottom-right {
@@ -3972,12 +3984,22 @@ img {
   }
 
   .header__container-top {
-    padding-top: 11px;
-    padding-bottom: 11px;
+    padding-top: 13.5px;
+    padding-bottom: 13.5px;
   }
 
+  .header__menu-top-search {
+    padding: 0;
+  }
+
+  .header__image {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+}
+
   .header__menu-top-wrap {
-    padding: 60px 20px 50px 20px;
+    padding: 60px 20px 60px 20px;
   }
 
   .header__menu-list-item-link {
@@ -4005,8 +4027,8 @@ img {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    padding-top: 28px;
-    padding-bottom: 48px;
+    padding-top: 30px;
+    padding-bottom: 44px;
   }
 
   .section-hero__text {
@@ -4024,7 +4046,7 @@ img {
 
   .section-hero__text {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 41px;
     max-width: 90%;
     font-weight: 400;
     font-size: 12px;
@@ -4040,7 +4062,7 @@ img {
   }
 
   .section-about {
-    padding-bottom: 42px;
+    padding-bottom: 41px;
    }
 
   .section-about__title {
@@ -4057,7 +4079,7 @@ img {
   }
 
   .section-gallery {
-    padding-bottom: 22px;
+    padding-bottom: 19px;
   }
 
   .section-gallery__container {
@@ -4072,7 +4094,7 @@ img {
   }
 
   .section-gallery__filter-title {
-    margin-bottom: 6px;
+    margin-bottom: 5px;
   }
 
   .section-gallery__filter {
@@ -4083,6 +4105,10 @@ img {
   .section-gallery__content-left {
     width: 100%;
   }
+
+  .section-gallery__content-bottom {
+    margin-bottom: 30px;
+}
 
   .section-gallery__slide {
     min-height: 367px;
