--- a/css/style.css
+++ b/css/style.css
@@ -1222,7 +1222,7 @@ img {
 
  /* About */
 .section-about {
-  padding-bottom: 70px;
+  padding-bottom: 69px;
 }
 
 .section-about__content {
@@ -1247,15 +1247,12 @@ img {
 /* Gallery */
 .section-gallery {
   margin: 0 auto;
-  padding-bottom: 79px;
+  padding-bottom: 76px;
+  max-width: 1920px;
   background-image: url(../img/gallery-image-0.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.section-gallery__container {
-  padding-right: 57px;
 }
 
 .section-gallery__content-wrap {
@@ -1278,7 +1275,7 @@ img {
   -ms-flex-direction: column;
   flex-direction: column;
   margin-right: 0;
-  width: calc(400 / 1600 * 100%);
+  width: calc(485 / 1920 * 100%);
 }
 
 .section-gallery__title {
@@ -1305,13 +1302,13 @@ img {
 
 .section-gallery__content-bottom {
   margin-top: auto;
-  padding-bottom: 2px;
+  padding-bottom: 12px;
 }
 
 .section-gallery__content-bottom-item {
   font-weight: 400;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 28px;
   color: var(--color-white);
 }
 
@@ -1407,7 +1404,7 @@ img {
 
 .section-gallery__swiper {
   margin-right: 0;
-  width: calc(1150  / 1600 * 100%);
+  width: calc(1373  / 1920 * 100%);
 }
 
 .section-gallery__slides-container {
@@ -1421,15 +1418,14 @@ img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 25px;
-  padding-left: 3px;
+  padding-top: 27px;
 }
 
 .section-gallery__swiper-pagination {
   text-align: center;
-  margin-right: 19.5px;
+  margin-right: 20px;
   margin-bottom: 30px;
-  margin-left: 8.5px;
+  margin-left: 10px;
   color: var(--color-white);
 }
 
@@ -3056,7 +3052,7 @@ img {
   .header__item-form {
     width: 160px;
     font-size: 16px;
-  }
+}
 
   .header__item-form::placeholder {
     font-size: 16px;
@@ -3098,19 +3094,19 @@ img {
   }
 
   .section-gallery {
-    padding-bottom: 80px;
+    padding-bottom: 83px;
   }
 
   .section-gallery__content-left {
-    width: calc(483 / 1600 * 100%);
+    width: calc(580 / 1920 * 100%);
   }
 
   .section-gallery__content-bottom {
-    margin-bottom: 33px;
+    margin-bottom: 36px;
   }
 
   .section-gallery__slide {
-    min-height: 315px;
+    min-height: 310px;
   }
 
   .section-gallery__filter-title {
@@ -3119,7 +3115,7 @@ img {
 
   .section-gallery__swiper {
     margin-right: 0;
-    width: calc(1030  / 1600 * 100%);
+    width: calc(1235  / 1920 * 100%);
   }
 
   .section-catalog {
@@ -3359,6 +3355,9 @@ img {
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
+    /* -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1; */
   }
 
   .header__menu-top-nav {
@@ -3655,24 +3654,16 @@ img {
   }
 
   .section-gallery {
-    padding-bottom: 80px;
+    padding-bottom: 83px;
   }
 
   .section-gallery__content-left {
-    width: calc(670 / 1600 * 100%);
-  }
-
-  .section-gallery__content-bottom {
-    margin-bottom: 25px;
+    width: calc(810 / 1920 * 100%);
   }
 
   .section-gallery__slide {
-    min-height: 330px;
+    min-height: 325px;
   }
-
-  .section-gallery__swiper-navigation {
-    padding-left: 0;
-}
 
   .section-gallery__filter-title {
     margin-bottom: 9px;
@@ -3680,7 +3671,7 @@ img {
 
   .section-gallery__swiper {
     margin-right: 0;
-    width:  100%;
+    width: calc(1235  / 1920 * 100%);
   }
 
   .section-gallery__swiper {
@@ -3698,11 +3689,11 @@ img {
   }
   
   .section-gallery__swiper-pagination {
-    margin-bottom: 29px;
+    margin-bottom: 25px;
   }
   
   .section-gallery__swiper-btn {
-    margin-bottom: 29px;
+    margin-bottom: 25px;
   }
 
   .section-catalog__content-bottom-right {
@@ -4062,7 +4053,7 @@ img {
   }
 
   .section-about {
-    padding-bottom: 41px;
+    padding-bottom: 42px;
    }
 
   .section-about__title {
@@ -4079,7 +4070,7 @@ img {
   }
 
   .section-gallery {
-    padding-bottom: 19px;
+    padding-bottom: 22px;
   }
 
   .section-gallery__container {
@@ -4094,7 +4085,7 @@ img {
   }
 
   .section-gallery__filter-title {
-    margin-bottom: 5px;
+    margin-bottom: 6px;
   }
 
   .section-gallery__filter {
@@ -4105,10 +4096,6 @@ img {
   .section-gallery__content-left {
     width: 100%;
   }
-
-  .section-gallery__content-bottom {
-    margin-bottom: 30px;
-}
 
   .section-gallery__slide {
     min-height: 367px;
